plugins {
	id 'org.springframework.boot' version '2.6.7'
	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
	id 'java'
}

group = 'school.bonobono'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	/* Implementation */
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation group: 'net.nurigo', name: 'javaSDK', version: '2.2' // 문자메시지 발송 관련
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1' // json 파싱 (문자메시지 발송 관련)

	/* compileOnly */
	compileOnly 'org.projectlombok:lombok'
	/* runtimeOnly */
	runtimeOnly 'mysql:mysql-connector-java'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
	/* annotationProcessor */
	annotationProcessor 'org.projectlombok:lombok'
	/* testImplementation */
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
